--- a/FIgma/assets/css/style.css
+++ b/FIgma/assets/css/style.css
@@ -1,6 +1,10 @@
 * {
   box-sizing: border-box;
 }
+:root {
+  --font-heading: "Sen", sans-serif;
+  --primary-color: #ffb900;
+}
 html {
   font-size: 62.5%;
 }
@@ -21,10 +25,14 @@ a {
   text-align: center;
   font-size: 1.6rem;
   font-weight: 600;
-  border-radius: 24.5px;
+  border-radius: 999px;
   background: #171100;
 }
-.main-conten {
+.btn:hover {
+  opacity: 0.9;
+}
+
+.main-content {
   width: 1170px;
   max-width: calc(100% - 48px);
   margin-right: auto;
@@ -36,6 +44,7 @@ a {
 }
 
 .header.fixed {
+  z-index: 1;
   position: sticky;
   top: -28px;
 }
@@ -77,4 +86,145 @@ a {
 }
 .header .action {
   margin-left: 49px;
+}
+/* =========> Hero <============== */
+.hero {
+  padding-top: 57px;
+  background: #fffcf4;
+}
+.hero .body {
+  display: flex;
+}
+.hero .media-block {
+  width: 48%;
+  position: relative;
+}
+/* ======= Hero left============= */
+.hero .media-block .img {
+  width: 470px;
+  height: 685px;
+  object-fit: cover;
+  border-radius: 20px;
+}
+
+.hero .hero-sumarry {
+  padding: 24px;
+  position: absolute;
+  width: 270px;
+  bottom: 48px;
+  right: 0px;
+  border-radius: 12px;
+  background: #fff;
+  box-shadow: 0px 16px 32px 0px rgba(0, 0, 0, 0.05);
+}
+.hero-sumarry .item {
+  display: flex;
+  align-items: center;
+}
+.hero-sumarry .item + .item {
+  margin-top: 22px;
+}
+.hero-sumarry .icon {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff9e8;
+}
+.hero-sumarry .icon2 {
+  background-color: #fcefff;
+}
+.hero-sumarry .icon3 {
+  background-color: #ebeaff;
+}
+.hero-sumarry .infor {
+  margin-left: 16px;
+}
+.hero-sumarry .label {
+  color: #5f5b53;
+  font-size: 1.4rem;
+  line-height: 1.86; /* 185.714% */
+}
+.hero-sumarry .title {
+  color: #171100;
+  font-size: 1.8rem;
+  font-weight: 600;
+  line-height: 1.67; /* 166.667% */
+}
+
+/* ========Hero right========== */
+.hero .content-block {
+  width: 52%;
+  padding-left: 130px;
+  padding-top: 46px;
+}
+.hero .heading {
+  color: #171100;
+  font-family: var(--font-heading);
+  font-size: 5.8rem;
+  font-weight: 700;
+  line-height: 1.17; /* 117.241% */
+  letter-spacing: -1.16px;
+}
+.hero .desc {
+  margin-top: 28px;
+  color: #5f5b53;
+  font-size: 1.8rem;
+  font-weight: 400;
+  line-height: 1.67; /* 166.667% */
+}
+.hero .cta-group {
+  margin-top: 38px;
+  display: flex;
+  align-items: center;
+}
+.hero .hero-cta {
+  min-width: 180px;
+  background-color: var(--primary-color);
+  line-height: 64px;
+}
+.hero .watch-video {
+  display: flex;
+  align-items: center;
+  border: none;
+  background: transparent;
+  display: flex;
+  margin-left: 28px;
+  cursor: pointer;
+}
+.hero .watch-video .icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 40px;
+  background: #fff;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.07);
+}
+.hero .watch-video span {
+  color: #171100;
+  font-size: 1.8rem;
+  font-weight: 600;
+  line-height: 1.67; /* 166.667% */
+  margin-left: 14px;
+}
+.hero .desc-recent {
+  margin-top: 48px;
+}
+.hero .stats strong {
+  margin-right: 15px;
+  color: #171100;
+  font-family: var(--font-heading);
+  font-size: 44px;
+  font-weight: 700;
+  line-height: 1.23; /* 122.727% */
+}
+.hero .stats strong:nth-child(2) {
+  margin-left: 28px;
+}
+.hero .stats {
+  margin-top: 8px;
 }
