--- a/FIgma/assets/css/style.css
+++ b/FIgma/assets/css/style.css
@@ -27,9 +27,11 @@ a {
   font-weight: 600;
   border-radius: 999px;
   background: #171100;
+  cursor: pointer;
 }
 .btn:hover {
   opacity: 0.9;
+  cursor: pointer;
 }
 
 .main-content {
@@ -37,6 +39,14 @@ a {
   max-width: calc(100% - 48px);
   margin-right: auto;
   margin-left: auto;
+}
+.heading-lv2 {
+  color: #171100;
+  font-family: var(--font-heading);
+  font-size: 3.8rem;
+  font-weight: 700;
+  line-height: 1.27; /* 126.316% */
+  letter-spacing: -0.76px;
 }
 /* =============Header=============== */
 .header {
@@ -227,4 +237,141 @@ a {
 }
 .hero .stats {
   margin-top: 8px;
+}
+
+/* ==========popular========== */
+.popular {
+  padding: 60px 0;
+  margin-top: 140px;
+  /* background-color: cyan; */
+}
+
+.popular .popular-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.popular-top .desc {
+  margin-top: 16px;
+  width: 458px;
+  color: #5f5b53;
+  font-size: 1.8rem;
+  font-weight: 400;
+  line-height: 1.67; /* 166.667% */
+}
+.popular .controls {
+  display: flex;
+  gap: 18px;
+}
+.popular .controls .controls-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: transparent;
+  width: 40px;
+  height: 40px;
+  border: 1px solid var(--primary-color);
+  border-radius: 50%;
+  color: var(--primary-color);
+}
+.popular .controls .controls-btn:hover {
+  background-color: var(--primary-color);
+  color: #fff;
+}
+/* .popular .controls .controls-btn1 {
+  width: 40px;
+  height: 40px;
+  background: #fff;
+  border-radius: 50%;
+  border: 1px solid #ffb900; */
+
+/* .popular .controls .controls-btn2 {
+  border-radius: 40px;
+  background: #ffb900;
+  margin-left: 18px;
+  width: 40px;
+  height: 40px;
+  border: none;
+} */
+.popular .course-list {
+  margin-top: 55px;
+  display: flex;
+  gap: 30px;
+}
+.popular .course-item {
+  border-radius: 12px;
+  border: 1px solid #e2dfda;
+  background: #fff;
+}
+.popular .course-item:hover {
+  border: 1px solid transparent;
+  border-radius: 12px;
+  background: #fff;
+  box-shadow: 0px 18px 36px 0px rgba(0, 0, 0, 0.05);
+}
+.popular .course-list .thu {
+  width: 100%;
+  border-radius: 12px 12px 0px 0px;
+  height: 278px;
+  object-fit: cover;
+}
+.popular .infor {
+  padding: 16px 22px 22px;
+}
+.popular .course-list .head {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.popular .course-list .head .rating {
+  display: flex;
+  align-items: center;
+}
+.popular .course-list .head .rating .value {
+  color: #fea31b;
+  font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 1.75; /* 175% */
+  margin-left: 6px;
+}
+.popular .course-list .head .rating .star {
+  width: 18px;
+  height: 18px;
+}
+.popular .infor .title {
+  color: #171100;
+  font-size: 1.8rem;
+  font-weight: 600;
+  line-height: 1.67; /* 166.667% */
+}
+.popular .infor .desc {
+  margin-top: 6px;
+  color: #5f5b53;
+  font-size: 1.4rem;
+  font-weight: 400;
+  line-height: 1.86; /* 185.714% */
+}
+.popular .infor .foot {
+  margin-top: 12px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.popular .infor .foot .price {
+  color: #171100;
+  font-size: 1.8rem;
+  font-weight: 600;
+  line-height: 1.66; /* 166.667% */
+}
+.popular .infor .foot .btn2 {
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 1.86; /* 185.714% */
+  width: 118px;
+  height: 50px;
+  border: none;
+}
+.popular .infor .foot .btn2:hover {
+  background-color: var(--primary-color);
 }
