--- a/FIgma/assets/css/style.css
+++ b/FIgma/assets/css/style.css
@@ -388,8 +388,14 @@ a {
   padding: 96px 0;
   background: #2e2100;
 }
+.feedback-list {
+  display: flex;
+  overflow: hidden;
+}
 .feedback-items {
   display: flex;
+  flex-shrink: 0;
+  width: 100%;
 }
 .feedback-items .avatar {
   width: 72px;
@@ -441,4 +447,61 @@ a {
   font-size: 2.6rem;
   font-style: italic;
   line-height: 1.54; /* 153.846% */
+}
+
+/* ================feature1============== */
+.feature {
+  margin-top: 140px;
+  padding: 60px 0;
+  /* background-color: cyan; */
+}
+.feature .body {
+  display: flex;
+  justify-content: space-between;
+}
+.feature .body .images {
+  display: flex;
+  gap: 30px;
+}
+.feature .body .images img {
+  width: 270px;
+  height: 405px;
+  border-radius: 16px;
+  /* background: url(<path-to-image>) lightgray 50% / cover no-repeat; */
+  object-fit: cover;
+}
+.feature .body .images .lower {
+  margin-top: 34px;
+}
+.feature .body .content {
+  width: 41%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.feature .body .content .desc {
+  margin-top: 16px;
+  color: #5f5b53;
+  font-size: 1.6rem;
+  line-height: 1.75; /* 175% */
+}
+.feature .body .content .bnt-sign-up {
+  margin-top: 32px;
+  background-color: var(--primary-color);
+  width: 137px;
+  height: 50px;
+}
+/* ================feature1============== */
+.feature-2nd .body {
+  flex-direction: row-reverse;
+}
+.feature-2nd {
+  margin-top: 70px;
+}
+.feature-2nd .body .content {
+  width: 49%;
+}
+.feature-2nd .body .images img {
+  width: 470px;
+  height: 440px;
 }
