--- a/FIgma/assets/css/style.css
+++ b/FIgma/assets/css/style.css
@@ -505,3 +505,110 @@ a {
   width: 470px;
   height: 440px;
 }
+/* ================blogs============== */
+.blogs {
+  margin-top: 140px;
+  padding: 96px 0;
+  background: #fffcf4;
+}
+.blogs .blog-top {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+.blogs .blog-top .desc {
+  width: 448px;
+  margin: 16px 0 55px;
+  color: #696262;
+  font-size: 1.6rem;
+  line-height: 1.75; /* 175% */
+}
+.blogs .blog-list {
+  display: flex;
+  gap: 30px;
+  overflow: hidden;
+}
+.blogs .blog-list .item {
+  flex-shrink: 0;
+  width: calc(33.33% - 20px);
+  border-radius: 16px;
+  background: #fff;
+  height: 467px;
+}
+.blogs .blog-list .item:hover {
+  border-radius: 16px;
+  background: #fff;
+  box-shadow: 0px 16px 32px 0px rgba(0, 0, 0, 0.05);
+}
+.blogs .blog-list .item .thumb {
+  width: 100%;
+  height: 250px;
+  border-radius: 16px 16px 0px 0px;
+  object-fit: cover;
+}
+.blogs .blog-list .item .infor {
+  margin: 20px 20px 28px;
+}
+.blogs .item .date {
+  color: #5f5b53;
+  padding-bottom: 12px;
+  font-size: 1.4rem;
+  line-height: 1.86; /* 185.714% */
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+.blogs .item .date::before {
+  content: "";
+  display: inline-block;
+  margin-right: 4px;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background-color: var(--primary-color);
+}
+.blogs .item .date::after {
+  position: absolute;
+  bottom: 0;
+  content: "";
+  display: inline-block;
+  width: 160px;
+  height: 1px;
+  border-radius: 0.5px;
+  background: #e2dfda;
+}
+.blogs .item .title {
+  margin-top: 12px;
+  color: #171100;
+  font-size: 1.6rem;
+  font-weight: 600;
+  line-height: 1.75; /* 175% */
+}
+.blogs .item .btn {
+  margin-top: 12px;
+  font-size: 1.4rem;
+}
+.blogs .item .btn:hover {
+  background-color: var(--primary-color);
+}
+.blogs .dots {
+  margin-top: 38px;
+  display: flex;
+  gap: 6px;
+  justify-content: center;
+}
+.blogs .dots .dot {
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background: #5f5b53;
+  cursor: pointer;
+}
+.blogs .dots .dot:hover {
+  background-color: var(--primary-color);
+}
+.blogs .dots .dot.ative {
+  background-color: var(--primary-color);
+  cursor: default;
+}
